--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">IoT dPCR V2.1</string>
+    <string name="app_name">IoT dPCR Application</string>
 </resources>
